Initial Board Text Formatting Complete

--- a/index.html
+++ b/index.html
@@ -14,41 +14,51 @@
     </div>
     <div id="game-board-container">
         <!-- row one -->
-        <div class="board-item cat-1 category"></div>
-        <div class="board-item cat-2 category"></div>
-        <div class="board-item cat-3 category"></div>
-        <div class="board-item cat-4 category"></div>
-        <div class="board-item cat-5 category"></div>
+        <div class="board-item cat-1 category">
+           <div class="cat-1-item">SPORTS</div>
+        </div>
+        <div class="board-item cat-2 category">
+            <div class="cat-2-item">FOOD & DRINK</div>
+        </div>
+        <div class="board-item cat-3 category">
+            <div class="cat-3-item">THEATRE</div>
+        </div>
+        <div class="board-item cat-4 category">
+            <div class="cat-4-item">MUSIC</div>
+        </div>
+        <div class="board-item cat-5 category">
+            <div class="cat-5-item">FOUR LETTER WORDS</div>
+        </div>
         <!-- row two  -->
-        <div class="board-item cat-1-100 question-box"></div>
-        <div class="board-item cat-2-100 question-box"></div>
-        <div class="board-item cat-3-100 question-box"></div>
-        <div class="board-item cat-4-100 question-box"></div>
-        <div class="board-item cat-5-100 question-box"></div>
+        <div class="board-item cat-1-100 question-box">100</div>
+        <div class="board-item cat-2-100 question-box">100</div>
+        <div class="board-item cat-3-100 question-box">100</div>
+        <div class="board-item cat-4-100 question-box">100</div>
+        <div class="board-item cat-5-100 question-box">100</div>
         <!-- row three -->
-        <div class="board-item cat-1-200 question-box"></div>
-        <div class="board-item cat-2-200 question-box"></div>
-        <div class="board-item cat-3-200 question-box"></div>
-        <div class="board-item cat-4-200 question-box"></div>
-        <div class="board-item cat-5-200 question-box"></div>
+        <div class="board-item cat-1-200 question-box">200</div>
+        <div class="board-item cat-2-200 question-box">200</div>
+        <div class="board-item cat-3-200 question-box">200</div>
+        <div class="board-item cat-4-200 question-box">200</div>
+        <div class="board-item cat-5-200 question-box">200</div>
         <!-- row four  -->
-        <div class="board-item cat-1-300 question-box"></div>
-        <div class="board-item cat-2-300 question-box"></div>
-        <div class="board-item cat-3-300 question-box"></div>
-        <div class="board-item cat-4-300 question-box"></div>
-        <div class="board-item cat-5-300 question-box"></div>
+        <div class="board-item cat-1-300 question-box">300</div>
+        <div class="board-item cat-2-300 question-box">300</div>
+        <div class="board-item cat-3-300 question-box">300</div>
+        <div class="board-item cat-4-300 question-box">300</div>
+        <div class="board-item cat-5-300 question-box">300</div>
         <!-- row five -->
-        <div class="board-item cat-1-400 question-box"></div>
-        <div class="board-item cat-2-400 question-box"></div>
-        <div class="board-item cat-3-400 question-box"></div>
-        <div class="board-item cat-4-400 question-box"></div>
-        <div class="board-item cat-5-400 question-box"></div>
+        <div class="board-item cat-1-400 question-box">400</div>
+        <div class="board-item cat-2-400 question-box">400</div>
+        <div class="board-item cat-3-400 question-box">400</div>
+        <div class="board-item cat-4-400 question-box">400</div>
+        <div class="board-item cat-5-400 question-box">400</div>
         <!-- row six -->
-        <div class="board-item cat-1-500 question-box"></div>
-        <div class="board-item cat-2-500 question-box"></div>
-        <div class="board-item cat-3-500 question-box"></div>
-        <div class="board-item cat-4-500 question-box"></div>
-        <div class="board-item cat-5-500 question-box"></div>
+        <div class="board-item cat-1-500 question-box">500</div>
+        <div class="board-item cat-2-500 question-box">500</div>
+        <div class="board-item cat-3-500 question-box">500</div>
+        <div class="board-item cat-4-500 question-box">500</div>
+        <div class="board-item cat-5-500 question-box">500</div>
     </div>
 </body>
 </html>
