--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
 <body>
     <div id="header">
         <h1>Jeopardy</h1>
+        <nav id="navigation">
+            <button id="start-button">Start Game</button>
+            <button id="restart-button">Restart Game</button>
+        </nav>
+    </div>
+    <div id="scoreboard-container">
+        <div id="scoreboard-item">
+            <p id="scoreboard-text"></p>
+        </div>
     </div>
     <div id="game-board-container">
         <!-- row one -->
@@ -67,8 +76,8 @@
                     <div id="answer-text"></div>
                 </div>
                 <form id="answer-form">
-                    Answer: <input type="text" id="player-answer" placeholder="Answer Here">
-                    <input type="button" id="submit-button" onclick="checkAnswer()" value="Submit">
+                    <input type="text" id="player-answer" value="" placeholder="Answer Here">
+                    <input type="button" id="submit-button" value="Submit">
                 </form>
                 <div id="modal-footer">
                     <button class="modal-buttons" id="close" href="#">Close</a>
