Object IDs reformatted

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
             <div class="cat-5-item">FOUR LETTER WORDS</div>
         </div>
         <!-- row two  -->
-        <div class="board-item cat-1-100 question-box">100</div>
-        <div class="board-item cat-2-100 question-box">100</div>
-        <div class="board-item cat-3-100 question-box">100</div>
+        <div class="board-item cat-1-100 question-box" id="sports1">100</div>
+        <div class="board-item cat-2-100 question-box" id="">100</div>
+        <div class="board-item cat-3-100 question-box" id="">100</div>
         <div class="board-item cat-4-100 question-box">100</div>
         <div class="board-item cat-5-100 question-box">100</div>
         <!-- row three -->
