Condensed game functions and removed unnecessary variables

--- a/index.html
+++ b/index.html
@@ -40,34 +40,34 @@
         </div>
         <!-- row two  -->
         <div class="board-item cat-1-100 question-box" id="sports1">100</div>
-        <div class="board-item cat-2-100 question-box" id="">100</div>
-        <div class="board-item cat-3-100 question-box" id="">100</div>
-        <div class="board-item cat-4-100 question-box">100</div>
-        <div class="board-item cat-5-100 question-box">100</div>
+        <div class="board-item cat-2-100 question-box" id="fnD1">100</div>
+        <div class="board-item cat-3-100 question-box" id="theatre1">100</div>
+        <div class="board-item cat-4-100 question-box" id="music1">100</div>
+        <div class="board-item cat-5-100 question-box" id="flw1">100</div>
         <!-- row three -->
-        <div class="board-item cat-1-200 question-box">200</div>
-        <div class="board-item cat-2-200 question-box">200</div>
-        <div class="board-item cat-3-200 question-box">200</div>
-        <div class="board-item cat-4-200 question-box">200</div>
-        <div class="board-item cat-5-200 question-box">200</div>
+        <div class="board-item cat-1-200 question-box" id="sports2">200</div>
+        <div class="board-item cat-2-200 question-box" id="fnD2">200</div>
+        <div class="board-item cat-3-200 question-box" id="theatre2">200</div>
+        <div class="board-item cat-4-200 question-box" id="music2">200</div>
+        <div class="board-item cat-5-200 question-box" id="flw2">200</div>
         <!-- row four  -->
-        <div class="board-item cat-1-300 question-box">300</div>
-        <div class="board-item cat-2-300 question-box">300</div>
-        <div class="board-item cat-3-300 question-box">300</div>
-        <div class="board-item cat-4-300 question-box">300</div>
-        <div class="board-item cat-5-300 question-box">300</div>
+        <div class="board-item cat-1-300 question-box" id="sports3">300</div>
+        <div class="board-item cat-2-300 question-box" id="fnD3">300</div>
+        <div class="board-item cat-3-300 question-box" id="theatre3">300</div>
+        <div class="board-item cat-4-300 question-box" id="music3">300</div>
+        <div class="board-item cat-5-300 question-box" id="flw3">300</div>
         <!-- row five -->
-        <div class="board-item cat-1-400 question-box">400</div>
-        <div class="board-item cat-2-400 question-box">400</div>
-        <div class="board-item cat-3-400 question-box">400</div>
-        <div class="board-item cat-4-400 question-box">400</div>
-        <div class="board-item cat-5-400 question-box">400</div>
+        <div class="board-item cat-1-400 question-box" id="sports4">400</div>
+        <div class="board-item cat-2-400 question-box" id="fnD4">400</div>
+        <div class="board-item cat-3-400 question-box" id="theatre4">400</div>
+        <div class="board-item cat-4-400 question-box" id="music4">400</div>
+        <div class="board-item cat-5-400 question-box" id="flw4">400</div>
         <!-- row six -->
-        <div class="board-item cat-1-500 question-box">500</div>
-        <div class="board-item cat-2-500 question-box">500</div>
-        <div class="board-item cat-3-500 question-box">500</div>
-        <div class="board-item cat-4-500 question-box">500</div>
-        <div class="board-item cat-5-500 question-box">500</div>
+        <div class="board-item cat-1-500 question-box" id="sports5">500</div>
+        <div class="board-item cat-2-500 question-box" id="fnD5">500</div>
+        <div class="board-item cat-3-500 question-box" id="theatre5">500</div>
+        <div class="board-item cat-4-500 question-box" id="music5">500</div>
+        <div class="board-item cat-5-500 question-box" id="flw5">500</div>
         <!-- question modal -->
         <div id="modal">
             <div id="modal-textbox">
