Score To Beat box added and working

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         </nav>
     </div>
     <div id="scoreboard-container">
+        <div id="score-to-beat-item">
+            <p id="score-to-beat-text"></p>
+        </div>
         <div id="scoreboard-item">
             <p id="scoreboard-text"></p>
         </div>
