--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
         </div>
         <button id="start-button">Start Game</button>
-        <button id="restart-button">Restart Game</button>
+        <button id="restart-button">Reset Board</button>
     </div>    
     <div id="game-board-container">
         <!-- row one -->
