Game Rules modal added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="/app.js" defer></script>
     <link rel="stylesheet" href="/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <title>Jeopardy</title>
 </head>
@@ -22,7 +23,7 @@
             </div>
         </div>
         <button id="start-button">Start Game</button>
-        <button id="restart-button">Reset Board</button>
+        <button id="game-rules">Game Rules</button>
     </div>    
     <div id="game-board-container">
         <!-- row one -->
